# ts_sdk_c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE.md  PreventInSourceBuilds.cmake  README.md
cmake/: SynchronizeSubmodules.cmake
documents/: Doxyfile  README.md
examples/: CMakeLists.txt
examples/applications/: CMakeLists.txt  STM32L476RGTx.ld
examples/applications/custom_security/: main.c
examples/applications/custom_transport/: main.c
examples/applications/shim/: main.c
examples/applications/simple/: main.c
examples/applications/simple/include/: README.md  client-key.h
examples/simulator/: Dockerfile  Dockerfile.builder  Dockerfile.simulate  README.md  build.bash  cmake.bash  simulate.bash
examples/tests/: CMakeLists.txt  cacert.h  client-crt.h  test_debug_interface.c  test_driver.c  test_files.c  test_firewall.c  test_message.c  test_scep.c  test_socket.c  test_socket_tls.c  test_transport_mqtt.c  test_transport_mqtt_tls.c
scripts/: cmake.bash  config.pl.hold  get_submodules.sh  include_certs.sh  include_certs_mac.sh  install_file_certs.sh  openocd.bash  runsimple.sh  setup_scep.sh
scripts/preconf/: install-nanowallk.sh  sample_scep_csr.cnf  uninstall-nanowallk.sh  vz_CA.der
sdk/: CMakeLists.txt
sdk/include/: at_intfc.h  rbuf.h  ts_address.h  ts_cert.h  ts_connection.h  ts_controller.h  ts_driver.h  ts_file.h  ts_firewall.h  ts_log.h  ts_message.h  ts_mutex.h  ts_platform.h  ts_profile.h  ts_protocol.h  ts_scep.h  ts_security.h  ts_service.h  ts_status.h  ts_suspend.h  ts_transport.h  ts_util.h  ts_version.h
sdk/source/: ts_address.c  ts_connection.c  ts_log.c  ts_message.c  ts_profile.c  ts_service.c  ts_status.c  ts_suspend.c  ts_util.c  ts_version.c
sdk_components/: CMakeLists.txt  ts_components.c  ts_components.h
sdk_components/at_interpreter/: at_intfc.c  rbuf.c
sdk_components/controller/: cmd_urc_monarch.h  ts_controller_monarch.c  ts_controller_none.c  ts_controller_socket.c
sdk_components/controller/at_interpreter/: at_intfc.c  rbuf.c  rbuf.h
sdk_components/driver/: ts_driver_device.c  ts_driver_port.c
sdk_components/protocol/: ts_protocol_none.c  ts_protocol_ts_cbor.c  ts_protocol_ts_json.c
sdk_components/security/: ts_security_mbedtls.c  ts_security_mocana.c  ts_security_none.c
sdk_components/service/: ts_service_none.c  ts_service_ts_cbor.c  ts_service_ts_json.c
sdk_components/transport/: ts_transport_mqtt.c  ts_transport_mqtt.h
sdk_dependencies/: CMakeLists.txt  README.md  mbedtls_config.h  mocana_config.h
sdk_dependencies/paho.mqtt.embedded-c/MQTTClient-C/src/: MQTTClient.c  MQTTClient.h
sdk_dependencies/paho.mqtt.embedded-c/MQTTPacket/src/: MQTTConnect.h
sdk_platforms/: CMakeLists.txt  README.md  ts_platforms.c  ts_platforms.h
sdk_platforms/none/nucleo-l476/: ts_driver_none_uart.c  ts_platform_none.c
sdk_platforms/threadX/renesas_s5_d9/: configuration.xml
sdk_platforms/threadX/renesas_s5_d9/script/: S5D9.ld
sdk_platforms/unix/: ts_driver_unix_serial.c  ts_driver_unix_socket.c  ts_platform_unix.c
toolchain/: Dockerfile  Toolchain.cmake  arm-none-eabi-gnu.cmake  arm-none-eabi.cmake  build.bash  cmake.bash
tools/: SynchronizeSubmodules.cmake  arm-none-eabi-gnu.cmake
